Archive2/ee/0211ca42156392/output
main.cpp:2:10: error: 'typaname' has not been declared
 template<typaname T>
          ^
main.cpp:3:11: error: variable or field 'func' declared void
 void func(T obj)
           ^
main.cpp:3:13: error: expected ')' before 'obj'
 void func(T obj)
             ^
main.cpp: In function 'void func(T)':
main.cpp:12:19: error: 'isBeautiful' was not declared in this scope
     static_assert(isBeautiful<T>::value);
                   ^
main.cpp:12:32: error: expected primary-expression before '>' token
     static_assert(isBeautiful<T>::value);
                                ^
main.cpp:12:33: error: '::value' has not been declared
     static_assert(isBeautiful<T>::value);
                                 ^
main.cpp:12:40: error: expected ',' before ')' token
     static_assert(isBeautiful<T>::value);
                                        ^
main.cpp:12:40: error: expected string-literal before ')' token
